envalysis 0.5.0
===============

NEW FEATURES
* Finding optimum weights for weighted calibrations using `weight_select()`
* Calculating matrix effects (signal suppression/enhancement) with `matrix_effect()`
* `calibration()` now checks for model assumptions

MINOR IMPROVEMENTS
* Snapshot testing
* Better and more consistent documentation

BUG FIXES

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS



envalysis 0.4.2
===============

NEW FEATURES

MINOR IMPROVEMENTS
* Move to testthat 3rd edition

BUG FIXES
* Fix regression when using weights in `calibration()`

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS



envalysis 0.4.1
===============

NEW FEATURES
* First preparations for weights support in `calibration()`

MINOR IMPROVEMENTS
* Rename master branch to main

BUG FIXES
* Update `testthat::expect_equal()` calls to keep compatibility with R 4.1.0

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS



envalysis 0.4.0
===============

NEW FEATURES

MINOR IMPROVEMENTS
* `texture()` now takes data as formula
* tibble support for `texture()`
* `loq()` iterates only until significant digits won't change anymore

BUG FIXES
* Force percentage bounds for `texture()` to 0 and 100
* Increased margins for `theme_publish()`

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS



envalysis 0.3.3
===============

NEW FEATURES

MINOR IMPROVEMENTS
* First CRAN release
* Better package description

BUG FIXES

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS



envalysis 0.3.2
===============

NEW FEATURES

MINOR IMPROVEMENTS

BUG FIXES
* Reimplementation of drc's `mselect()` for `texture()` to get rid of global variables

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS



envalysis 0.3.1
===============

NEW FEATURES

MINOR IMPROVEMENTS
* `loq()` now uses iterations instead of estimating the value from `lod()`

BUG FIXES
* Better handling of unbalanced designs in `calibration()`

DEPRECATED FUNCTIONS

DEFUNCT FUNCTIONS
* `make.raw()`, use `rep()` instead ;-)


envalysis 0.3.0
===============

NEW FEATURES
* Starting with testthat
