@@ -7,6 +7,7 @@ NEW FEATURES
 * `calibration()` now checks for model assumptions
 
 MINOR IMPROVEMENTS
+* Additional "blanks" parameter introduced to `calibration()`, `lod()`, and `loq()`
 * Snapshot testing
 * Better and more consistent documentation
 
